[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/main.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/ui_theme_main.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -116.0
margin_right = 56.0
margin_bottom = -90.0
text = "Space Invaders"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -52.0
margin_right = 57.5
margin_bottom = 52.0
rect_min_size = Vector2( 115, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayOneBtn" type="Button" parent="Menu"]
margin_right = 115.0
margin_bottom = 28.0
text = "1 Player"

[node name="PlayTwoBtn" type="Button" parent="Menu"]
margin_top = 32.0
margin_right = 115.0
margin_bottom = 60.0
text = "2 Players"

[node name="ExitBtn" type="Button" parent="Menu"]
margin_top = 64.0
margin_right = 115.0
margin_bottom = 92.0
text = "Exit"

[node name="Difficulty" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -70.0
margin_right = 57.5
margin_bottom = 70.0
rect_min_size = Vector2( 115, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EasyBtn" type="Button" parent="Difficulty"]
margin_right = 115.0
margin_bottom = 30.0
text = "Easy"

[node name="NormalBtn" type="Button" parent="Difficulty"]
margin_top = 34.0
margin_right = 115.0
margin_bottom = 64.0
text = "Normal"

[node name="HardBtn" type="Button" parent="Difficulty"]
margin_top = 68.0
margin_right = 115.0
margin_bottom = 98.0
text = "Hard"

[node name="NigthmareBtn" type="Button" parent="Difficulty"]
margin_top = 102.0
margin_right = 115.0
margin_bottom = 132.0
text = "Nightmare"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -26.0
text = "v0.2.0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
